# soyocontroller

./: LICENSE  Makefile  README.md  pyproject.toml
src/: sml2mqtt.py  soyocontroller.env  soyocontroller.py  soyocontroller.service  soyocontroller.service.in
